# cbaseline

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  RELEASE_VERIFICATION.md  TESTING.md  publish.sh  pyproject.toml
.github/workflows/: publish.yml  tests.yml
cbaseline/: __init__.py  api.py  calibration.py  geometry.py  kernels.py  uniform.py  weighted.py
examples/: example_usage.py
tests/: conftest.py  test_api.py  test_calibration.py  test_geometry.py  test_kernels.py  test_public_api.py  test_uniform.py  test_weighted.py
