[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CBaseline"
version = "0.1.0"
description = "Canonical baselines for Shapley and integrated gradient attribution."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

authors = [
    { name = "Ludger Hentschel" }
]

keywords = [
    "machine-learning",
    "interpretability",
    "integrated-gradients",
    "feature-attribution",
    "integrated gradients", 
    "SHAP",
    "treeig",
    "edef",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.58",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[project.urls]
Homepage = "https://github.com/lhentschel/cbaseline"
Repository = "https://github.com/lhentschel/cbaseline"
Issues = "https://github.com/lhentschel/cbaseline/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cbaseline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
